Updated syntax for some of the demo files

--- a/2015-ProbAndStats-ProjectTutorial.ipynb
+++ b/2015-ProbAndStats-ProjectTutorial.ipynb
@@ -113,11 +113,11 @@
     "for indx in np.arange(500):\n",
     "    dat_out.append(np.polyfit(xvals,makeFakeData(fn3),2))\n",
     "dat_out = np.array(dat_out)\n",
-    "print dat_out\n",
-    "print np.mean(dat_out[:,0])\n",
-    "print np.mean(dat_out[:,1])\n",
-    "print np.std(dat_out[:,0])\n",
-    "print np.cov(dat_out[:,0],dat_out[:,1])\n",
+    "print(dat_out)\n",
+    "print(np.mean(dat_out[:,0]))\n",
+    "print(np.mean(dat_out[:,1]))\n",
+    "print(np.std(dat_out[:,0]))\n",
+    "print(np.cov(dat_out[:,0],dat_out[:,1]))\n",
     "\n",
     "plt.scatter(dat_out[:,0],dat_out[:,1])"
    ]
