--- a/Demo-NumpyBasics.ipynb
+++ b/Demo-NumpyBasics.ipynb
@@ -57,8 +57,8 @@
     "import numpy as np\n",
     "x = np.linspace(-5,5,30) # create 30 points from -5 to 5, uniformly spaced\n",
     "y = x*x - 2*x\n",
-    "print x\n",
-    "print y"
+    "print(x)\n",
+    "print(y)"
    ]
   },
   {
@@ -86,16 +86,16 @@
    "source": [
     "# Things you can do with arrays\n",
     "#    - index their elements\n",
-    "print x[5]\n",
+    "print(x[5])\n",
     "#    - perform arithmetic operations on all elements, without an explicit loop\n",
-    "print x+1\n",
+    "print(x+1)\n",
     "#    - ask their size\n",
-    "print [len(x), x.shape]\n",
+    "print([len(x), x.shape])\n",
     "#    - request parts of an array\n",
-    "print x[:3]\n",
-    "print x[3:7]\n",
+    "print(x[:3])\n",
+    "print(x[3:7])\n",
     "z = x[:-3]   # Negative number <=> index n - 1\n",
-    "print len(z), len(x)"
+    "print(len(z), len(x))"
    ]
   },
   {
@@ -118,10 +118,10 @@
     "#     arrays: + is element-by-element addition\n",
     "a = [1,2,3]\n",
     "b = [99,100]\n",
-    "print a+b\n",
+    "print(a+b)\n",
     "# You can convert a list to an array\n",
     "c = np.array(a+b)\n",
-    "print c+c  # now + operator is element-by-element addition"
+    "print(c+c)  # now + operator is element-by-element addition"
    ]
   },
   {
@@ -180,15 +180,15 @@
     "# Horrible, but it works\n",
     "dat = np.array( [x,y]).T\n",
     "#print dat\n",
-    "print dat.shape, x.shape\n",
+    "print(dat.shape, x.shape)\n",
     "dat0 = np.array( [x,y]);\n",
-    "print dat0.shape\n",
+    "print(dat0.shape)\n",
     "\n",
     "# Less horrible, and you learn something\n",
     "dat = np.zeros( (len(x),2))\n",
     "dat[:,0] =x\n",
     "dat[:,1] =y\n",
-    "print dat\n",
+    "print(dat)\n",
     "\n",
     "\n",
     "np.savetxt(\"my-file.dat\", dat)"
