--- a/InClassDemo-Python.ipynb
+++ b/InClassDemo-Python.ipynb
@@ -2,44 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-15T16:48:08.633465Z",
+     "start_time": "2024-04-15T16:48:08.207168Z"
+    }
+   },
+   "source": [
+    "# Realtime demo\n",
+    "import numpy as np\n",
+    "a = np.array([74,77,72,78,73,72,68,74,83,61,66,63])\n",
+    "print(np.sum(a), np.sum(a*a))"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 861 62221\n"
+      "861 62221\n"
      ]
     }
    ],
-   "source": [
-    "# Realtime demo\n",
-    "import numpy as np\n",
-    "a = np.array([74,77,72,78,73,72,68,74,83,61,66,63])\n",
-    "print np.sum(a), np.sum(a*a)"
-   ]
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-15T16:48:58.344276Z",
+     "start_time": "2024-04-15T16:48:58.334408Z"
+    }
+   },
+   "source": [
+    "print(np.mean(a))\n",
+    "print(np.sum((a-np.mean(a))*(a-np.mean(a)))/(len(a)-1))\n",
+    "print(np.sqrt(np.sum((a-np.mean(a))*(a-np.mean(a)))/(len(a)-1)))"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "71.75\n",
-      "40.3863636364\n",
-      "6.35502664325\n"
+      "40.38636363636363\n",
+      "6.355026643245773\n"
      ]
     }
    ],
-   "source": [
-    "print np.mean(a)\n",
-    "print  np.sum((a-np.mean(a))*(a-np.mean(a)))/(len(a)-1)\n",
-    "print np.sqrt(np.sum((a-np.mean(a))*(a-np.mean(a)))/(len(a)-1))"
-   ]
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -104,9 +114,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
