--- a/main.ipynb
+++ b/main.ipynb
@@ -3,18 +3,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "initial_id",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": [
-    "# Testing to add, commit, and push - Dylan"
-   ]
+   "source": "print(\"This is a miain file\")"
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
