--- a/main.ipynb
+++ b/main.ipynb
@@ -8,7 +8,14 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": "print(\"This is a miain file\")"
+   "source": [
+    "import numpy as np\n",
+    "import scipy.stats\n",
+    "distrib0 = scipy.stats.truncnorm(-3,3,loc=0,scale=1)\n",
+    "distrib1 = scipy.stats.uniform(loc=-3,scale=6)\n",
+    "\n",
+    "print(\"This is a miain file\")"
+   ]
   }
  ],
  "metadata": {
