--- a/main.ipynb
+++ b/main.ipynb
@@ -14,9 +14,7 @@
     "distrib0 = scipy.stats.truncnorm(-3,3,loc=0,scale=1)\n",
     "distrib1 = scipy.stats.uniform(loc=-3,scale=6)\n",
     "\n",
-    "print(\"This is a miain file\")\n",
-    "\n",
-    "#TESTING - ALEC"
+    "print(\"This is a miain file\")\n"
    ]
   }
  ],
