Added the One dimensional example to main

--- a/main.ipynb
+++ b/main.ipynb
@@ -16,6 +16,23 @@
     "\n",
     "print(\"This is a miain file\")\n"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# One dimensional example\n",
+    "def integrate_me(f, distrib, npts=100):\n",
+    "    x = distrib.rvs(npts)\n",
+    "    ps = distrib.pdf(x)\n",
+    "    f = f(x)\n",
+    "    mu = np.mean(f/ps)\n",
+    "    err = np.std(f/ps)/np.sqrt(npts)\n",
+    "    return mu,err"
+   ],
+   "id": "ccd7cb5cae64a63b"
   }
  ],
  "metadata": {
