Example of integration

--- a/main.ipynb
+++ b/main.ipynb
@@ -62,6 +62,24 @@
     "        V = np.prod([self.bounds[:,1]- self.bounds[:,0]])\n",
     "        return np.ones(x.shape[0])/V"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9154880a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example of integration\n",
+    "my2d = MyTwoDUniform(bounds=[[-3,3],[-3,3]])\n",
+    "from scipy.stats import multivariate_normal\n",
+    "mu = np.array([1,-0.5])\n",
+    "cov = np.array([[ 1. , -0.1 ], [-0.1 , 0.05]])\n",
+    "def f(x1, x2):\n",
+    "    x = np.array([x1, x2]).T\n",
+    "    return multivariate_normal.pdf(x, mu, cov)\n",
+    "integrate_me(lambda x: f(*(x.T)), my2d)"
+   ]
   }
  ],
  "metadata": {
