--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "collapsed": true
@@ -12,22 +12,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is a miain file\n"
+      "This is a main file\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "import scipy.stats\n",
-    "distrib0 = scipy.stats.truncnorm(-3,3,loc=0,scale=1)\n",
-    "distrib1 = scipy.stats.uniform(loc=-3,scale=6)\n",
+    "distrib0 = scipy.stats.truncnorm(-3,3,loc=0,scale=1) # loc = mean, scale = variance\n",
+    "distrib1 = scipy.stats.uniform(loc=-3,scale=6) # a = the lower bound of the range, b = a+b = upper bound\n",
     "\n",
     "print(\"This is a main file\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ccd7cb5cae64a63b",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "41fbbfe3",
    "metadata": {},
    "outputs": [],
@@ -65,10 +65,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9154880a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.8035724304722368, 0.3672678208989348)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Example of integration\n",
     "my2d = MyTwoDUniform(bounds=[[-3,3],[-3,3]])\n",
@@ -79,6 +90,31 @@
     "    x = np.array([x1, x2]).T\n",
     "    return multivariate_normal.pdf(x, mu, cov)\n",
     "integrate_me(lambda x: f(*(x.T)), my2d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c0a2e1af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20.0, 0.0)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Integrates Estimates 0: Uniform 1d\n",
+    "distrib2 = scipy.stats.uniform(loc=-10,scale=20)\n",
+    "def f_1(x):\n",
+    "    return 1\n",
+    "integrate_me(f_1,distrib2,10**3)"
    ]
   }
  ],
