--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "initial_id",
    "metadata": {
     "collapsed": true
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "ccd7cb5cae64a63b",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "41fbbfe3",
    "metadata": {},
    "outputs": [],
@@ -65,17 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "9154880a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.42005618406268075, 0.20428017151532737)"
+       "(0.8362945860335276, 0.2777749953289056)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "c0a2e1af",
    "metadata": {},
    "outputs": [
@@ -104,13 +104,14 @@
        "(20.0, 0.0)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Integrates Estimates 0: Uniform 1d\n",
+    "import scipy\n",
     "distrib2 = scipy.stats.uniform(loc=-10,scale=20)\n",
     "def f_1(x):\n",
     "    return 1\n",
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "id": "0c5b8deb",
    "metadata": {},
    "outputs": [
@@ -127,7 +128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Integral: 3119.5517 +/- 0.8033\n"
+      "Integral: 2859.2257 +/- 0.2289\n"
      ]
     }
    ],
@@ -146,8 +147,8 @@
     "    dist = stats.multivariate_normal(mean=mean, cov=cov)\n",
     "\n",
     "    # Define the truncated normal distribution\n",
-    "    lower = -3\n",
-    "    upper = 3\n",
+    "    lower = -5\n",
+    "    upper = 5\n",
     "    trunc_dist = stats.truncnorm(a=(lower - mean[0]) / np.sqrt(cov[0, 0]),\n",
     "                                 b=(upper - mean[0]) / np.sqrt(cov[0, 0]),\n",
     "                                 loc=mean[0], scale=np.sqrt(cov[0, 0]))\n",
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "id": "02a9c78b",
    "metadata": {},
    "outputs": [
@@ -183,7 +184,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Integral: 2701.2719 +/- 0.6876\n"
+      "Integral: 926.5795 +/- 0.0216\n"
      ]
     }
    ],
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "cea6f735",
    "metadata": {},
    "outputs": [
@@ -239,7 +240,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Integral: 755.0512 +/- 0.0523\n"
+      "Integral: 162.9915 +/- 0.0389\n"
      ]
     }
    ],
@@ -289,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "3a99ad2a",
    "metadata": {},
    "outputs": [
